[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/ReviewWindow.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/KosugiMaru-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=8]
action = "reveal_kanji"
pressed = true

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=10]
action = "wrong_kanji"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=12]
action = "correct_kanji"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[node name="ReviewWindow" type="VBoxContainer"]
margin_right = 780.0
margin_bottom = 549.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 780.0
margin_bottom = 510.0
size_flags_vertical = 3

[node name="CounterContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 71.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectCount" type="Label" parent="Panel/CounterContainer"]
margin_right = 100.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.235294, 0.666667, 0.176471, 1 )
text = "Correct: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongCount" type="Label" parent="Panel/CounterContainer"]
margin_top = 36.0
margin_right = 100.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.729412, 0.0745098, 0.0745098, 1 )
text = "Wrong: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftCount" type="Label" parent="Panel/CounterContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "Left: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -93.0
margin_right = 300.0
margin_bottom = 71.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Meanings" type="Label" parent="Panel/MainContainer"]
margin_top = 34.0
margin_right = 600.0
margin_bottom = 67.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = SubResource( 4 )
text = "play with, tamper, trifle with"
align = 1
valign = 1
autowrap = true

[node name="Reveal" type="Button" parent="Panel/MainContainer"]
visible = false
margin_top = 63.0
margin_right = 600.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 4 )
shortcut = SubResource( 9 )
text = "Reveal Kanji [Enter]"

[node name="KanjiAnswer" type="Label" parent="Panel/MainContainer"]
margin_top = 97.0
margin_right = 600.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 5 )
text = "å¼„"
align = 1
valign = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
margin_top = 514.0
margin_right = 780.0
margin_bottom = 549.0
custom_constants/separation = 100
alignment = 1

[node name="Wrong" type="Button" parent="ButtonContainer"]
margin_left = 65.0
margin_right = 340.0
margin_bottom = 35.0
rect_min_size = Vector2( 275, 0 )
custom_fonts/font = SubResource( 6 )
shortcut = SubResource( 11 )
text = "Wrong [K]"

[node name="Correct" type="Button" parent="ButtonContainer"]
margin_left = 440.0
margin_right = 715.0
margin_bottom = 35.0
rect_min_size = Vector2( 275, 0 )
custom_fonts/font = SubResource( 7 )
shortcut = SubResource( 13 )
text = "Correct [Spacebar]"
